--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mathjs": "^3.3.0",
     "mathquill": "^0.10.1-a",
     "meteor-node-stubs": "^0.2.3",
+    "nestedSortable": "^1.3.4",
     "nodejs": "0.0.0",
     "qunit": "^0.9.1",
     "react": "^15.2.1",
