--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "algebrite": "^0.2.20",
     "big-integer": "^1.6.15",
     "brototype": "0.0.5",
+    "classnames": "^2.2.5",
     "jquery": "^3.1.0",
     "jquery-ui": "^1.10.5",
     "katex": "^0.6.0",
@@ -32,6 +33,8 @@
     "qunit": "^0.9.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
     "tree-model": "^1.0.4"
   },
   "devDependencies": {
