--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "algebra.js": "^0.2.5",
     "algebrite": "^0.2.20",
+    "babel-runtime": "^6.18.0",
+    "bcrypt": "^0.8.7",
     "big-integer": "^1.6.15",
     "brototype": "0.0.5",
     "classnames": "^2.2.5",
@@ -32,6 +34,7 @@
     "nodejs": "0.0.0",
     "qunit": "^0.9.1",
     "react": "^15.2.1",
+    "react-addons-pure-render-mixin": "^15.3.2",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
