--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery-ui": "^1.10.5",
     "katex": "^0.6.0",
     "mathjs": "^3.3.0",
+    "mathml-to-asciimath": "^1.4.0",
     "mathquill": "^0.10.1-a",
     "meteor-node-stubs": "^0.2.3",
     "nestedSortable": "^1.3.4",
