--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "meteor-node-stubs": "^0.2.4",
     "nestedSortable": "^1.3.4",
     "nodejs": "0.0.0",
-    "qunit": "^0.9.1",
+    "qunit": "^0.9.3",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-multi": "^0.1.12",
-    "tree-model": "^1.0.4"
+    "tree-model": "^1.0.4",
+    "uglify-js": "^3.0.28"
   },
   "devDependencies": {
     "qunitjs": "^2.0.0"
