--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "augmath",
   "version": "1.0.0",
   "description": "AugMath is based on the idea that while Maths (broadly defined as the study and creation of structures) can and should explore its abstract aspects, it can not scape a \"representation\" when doing something that requires a tool that augments the human mind alone, and thus it should embrace, explore, and even seize this aspect as well. Really the work I'm doing here in JavaScript is the first baby step in a much grander vision of a future where Mathematics, Physics, Art, Engineering, Music, Philosophy, and other aspects of the Human Experience  become much more intertwined and hard to distinguish. I imagine the classroom having become a virtual space for the exploration of structures, creating virtual worlds, whether they are to explore some awe-inspiring idea in a video game, or to make a tool to predict and model bosonic excitations in condensed matter.",
-  "main": "index.js",
+  "main": "build/augmath.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "babel": "babel --presets es2015 js/main.js -o build/main.bundle.js",
+    "start": "http-server",
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
@@ -19,21 +22,24 @@
   "dependencies": {
     "algebra.js": "^0.2.6",
     "algebrite": "^0.4.5",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.20.0",
     "bcrypt": "^0.8.7",
     "big-integer": "^1.6.15",
     "brototype": "0.0.5",
     "classnames": "^2.2.5",
-    "jquery": "^3.1.1",
+    "jquery": "^3.2.1",
     "jquery-ui": "^1.10.5",
     "katex": "^0.6.0",
+    "latextomathml": "0.0.4",
     "mathjs": "^3.8.1",
     "mathml-to-asciimath": "^1.4.0",
     "mathquill": "^0.10.1-a",
     "meteor-node-stubs": "^0.2.4",
     "nestedSortable": "^1.3.4",
     "nodejs": "0.0.0",
-    "qunit": "^0.9.3",
     "react": "^15.4.2",
     "react-addons-pure-render-mixin": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -41,10 +47,20 @@
     "redux": "^3.6.0",
     "redux-multi": "^0.1.12",
     "tree-model": "^1.0.4",
-    "uglify-js": "^3.0.28"
+    "uglify-js": "^3.0.28",
+    "verdict.js": "^0.1.2",
+    "webpack": "^3.5.5"
   },
   "devDependencies": {
-    "qunitjs": "^2.0.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "qunitjs": "^2.4.0",
+    "rollup": "^0.49.2",
+    "rollup-plugin-babel": "^3.0.2",
+    "webpack": "^3.8.1"
   },
   "keywords": [
     "maths",
