--- a/package.json
+++ b/package.json
@@ -25,16 +25,15 @@
     "babel-loader": "^7.1.2",
     "babel-runtime": "^6.25.0",
     "bcrypt": "^0.8.7",
-    "big-integer": "^1.6.15",
+    "big-integer": "^1.6.26",
     "brototype": "0.0.5",
     "classnames": "^2.2.5",
     "jquery": "^3.2.1",
-    "jquery-ui": "^1.10.5",
-    "katex": "^0.6.0",
+    "jquery-ui": "^1.12.1",
     "latextomathml": "0.0.4",
-    "mathjs": "^3.16.0",
+    "mathjs": "^3.20.0",
     "mathml-to-asciimath": "^1.4.0",
-    "mathquill": "^0.10.1-a",
+    "mathquill": "^0.10.1",
     "meteor-node-stubs": "^0.2.11",
     "nestedSortable": "^1.3.4",
     "nodejs": "0.0.0",
@@ -43,9 +42,9 @@
     "react-dom": "^15.6.1",
     "react-redux": "^4.4.8",
     "redux": "^3.7.2",
-    "redux-multi": "^0.1.12",
-    "tree-model": "^1.0.4",
-    "uglify-js": "^3.0.28",
+    "redux-multi": "^0.1.91",
+    "tree-model": "^1.0.6",
+    "uglify-js": "^3.3.7",
     "verdict.js": "^0.1.2",
     "webpack": "^3.5.5"
   },
