fixed some drag and drop bugs

--- a/others/.babelrc
+++ b/others/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets" : ["babel-preset-env","react"],
+  "presets" : ["es2015", "stage-3","react"],
   "plugins": ["syntax-object-rest-spread", "transform-object-rest-spread"]
 }
